changed a few comments

--- a/tox.ini
+++ b/tox.ini
@@ -181,11 +181,7 @@ commands =
     {env:PYTEST_COMMAND} {posargs}
 
 [testenv:pyinstaller]
-# Check that astropy can be included in a PyInstaller bundle without any issues. This
-# also serves as a test that tests do not import anything from outside the tests
-# directories with relative imports, since we copy the tests out to a separate directory
-# to run them.
-description = check that astropy can be included in a pyinstaller bundle
+description = check that sunpy can be included in a pyinstaller bundle
 changedir = .pyinstaller
 deps =
     # The developer version of PyInstaller doesn't work yet because it
