--- a/docs/code_ref/sunpy_stability.yaml
+++ b/docs/code_ref/sunpy_stability.yaml
@@ -1,23 +1,23 @@
 coordinates:
   status: stable
-  comments: Should be stable, with additions and small changes expected.
+  comments: Any future changes should largely maintain backwards compatibility.
 data:
   status: mature
   comments: Should see no major changes.
 database:
   status: dev
-  comments: Undergoing changes with each major release.
+  comments: While it has not changed recently, it could be suggest to major revisions in future.
 image:
   status: dev
-  comments: Undergoing changes with each major release.
+  comments: While it has not changed recently, it could be suggest to major revisions in future.
 instr:
-  status: dev
-  comments: Maybe be phased out and migrated to affiliated packages in the future.
+  status: deprecated
+  comments: Will be removed in sunpy 3.1. Please use `sunkit-instruments`.
 io:
   status: mature
   comments: Should see no major changes.
 map:
-  status: mature
+  status: stable
   comments: Any future changes should largely maintain backwards compatibility.
 net:
   status: stable
@@ -26,17 +26,20 @@ physics:
   status: dev
   comments:
 roi:
-  status: planned
-  comments: There is very little functionality.
+  status: deprecated
+  comments: Will be removed in sunpy 3.1. There is little functionality.
 sun:
-  status: dev
-  comments: Sub-module `constants` is stable.  Sub-module `models` will likely have major changes.
+  status: stable
+  comments: Any future changes should largely maintain backwards compatibility.
 time:
   status: stable
   comments: Any future changes should largely maintain backwards compatibility.
 timeseries:
   status: stable
   comments: Any future changes should largely maintain backwards compatibility.
+util:
+  status: dev
+  comments: This sub-module is not user facing and can and will change between versions.
 visualization:
   status: stable
   comments: Any future changes should largely maintain backwards compatibility.
