code review comments

--- a/docs/code_ref/sunpy_stability.yaml
+++ b/docs/code_ref/sunpy_stability.yaml
@@ -6,10 +6,10 @@ data:
   comments: Should see no major changes.
 database:
   status: dev
-  comments: While it has not changed recently, it could be suggest to major revisions in future.
+  comments: While it has not changed recently, it could be subject  to major revisions in future.
 image:
   status: dev
-  comments: While it has not changed recently, it could be suggest to major revisions in future.
+  comments: While it has not changed recently, it could be subject  to major revisions in future.
 instr:
   status: deprecated
   comments: Will be removed in sunpy 3.1. Please use `sunkit-instruments`.
@@ -29,8 +29,8 @@ roi:
   status: deprecated
   comments: Will be removed in sunpy 3.1. There is little functionality.
 sun:
-  status: stable
-  comments: Any future changes should largely maintain backwards compatibility.
+  status: dev
+  comments: Sub-module `constants` is stable. Sub-module `models` will likely have major changes.
 time:
   status: stable
   comments: Any future changes should largely maintain backwards compatibility.
