changed required pyinstaller version

--- a/tox.ini
+++ b/tox.ini
@@ -184,25 +184,18 @@ commands =
 description = check that sunpy can be included in a pyinstaller bundle
 changedir = .pyinstaller
 deps =
-    # The developer version of PyInstaller doesn't work yet because it
-    # requires https://github.com/pyinstaller/pyinstaller/pull/4888 -
-    # so for now we pin to the latest working commit.
-    git+https://github.com/pyinstaller/pyinstaller.git@c111ec5c#egg=PyInstaller
-    # PyInstaller is not yet compatible with Matplotlib 3.3 so we pin
-    # Matplotlib to an older version for now - see the following issue
-    # for more details: https://github.com/pyinstaller/pyinstaller/issues/5004
-    matplotlib<3.3
+    pyinstaller
 extras =
     tests
     net
     all
 commands =
+    ./python3 run_sunpy_tests.py
     pyinstaller --onefile run_sunpy_tests.py \
                 --distpath . \
                 --additional-hooks-dir hooks \
                 --exclude-module tkinter \
                 --hidden-import pytest \
-                --hidden-import pytest_doctestplus.plugin \
                 --hidden-import pytest_mpl.plugin
 
     ./run_sunpy_tests
