add to azure pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,6 +96,8 @@ stages:
 
           - linux: py38-conda
             libraries: {}
+          
+          - linux: pyinstaller
 
 
   - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
