codestyle test fix

--- a/tox.ini
+++ b/tox.ini
@@ -196,6 +196,7 @@ commands =
                 --additional-hooks-dir hooks \
                 --exclude-module tkinter \
                 --hidden-import pytest \
+                --hidden-import sunpy \
                 --hidden-import pytest_mpl.plugin
 
     ./run_sunpy_tests
