re-added extras=['all'] and updated to use PyInstaller from git

--- a/tox.ini
+++ b/tox.ini
@@ -184,7 +184,7 @@ commands =
 description = check that sunpy can be included in a pyinstaller bundle
 changedir = .pyinstaller
 deps =
-    pyinstaller
+    git+https://github.com/pyinstaller/pyinstaller
 extras =
     tests
     net
