--- a/setup.cfg
+++ b/setup.cfg
@@ -87,7 +87,7 @@ docs =
   sphinx
   sphinx-automodapi
   sphinx-changelog>=1.0.0 # First to include the changelog directive
-  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
+  sphinx-gallery>=0.9.0 # First to include the defer figures functionality
   sunpy-sphinx-theme
 
 [options.packages.find]
