--- a/.gitignore
+++ b/.gitignore
@@ -219,6 +219,8 @@ figure_test_images*
 tags
 sunpy_map.asdf
 baseline
+docs/guide/data_types/figure.png
+october_M1_flares.csv
 
 ### Pycharm(?)
 .idea
