[skip ci] ignore E501 for pep8speaks

--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -8,6 +8,8 @@ pycodestyle:
     - docs/conf.py
     - sunpy/__init__.py
     - sunpy/extern/
+  ignore:
+    - E501
 
 descending_issues_order: True
 
