--- a/setup.cfg
+++ b/setup.cfg
@@ -71,8 +71,10 @@ timeseries =
 visualization =
   matplotlib>=2.2.2
 tests =
-  pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
-  pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
+  jplephem  # For some coordinates tests
+  pytest-astropy>=0.8  # 0.8 is the first release to include filter-subpackage
+  hypothesis>=6.0.0  # Included in pytest-astropy. 6.0 is the first version to support disabling function-scoped fixture warning
+  pytest-doctestplus>=0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
   pytest-mock
   pytest-mpl >= 0.12
   tox
