removed skimage hiddenimport and installed hooks from github

--- a/tox.ini
+++ b/tox.ini
@@ -185,6 +185,7 @@ description = check that sunpy can be included in a pyinstaller bundle
 changedir = .pyinstaller
 deps =
     git+https://github.com/pyinstaller/pyinstaller
+    git+https://github.com/pyinstaller/pyinstaller-hooks-contrib
 extras =
     tests
     all
