pin a min version of h5py

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,9 @@ net =
   zeep>=3.4.0
 timeseries =
   h5netcdf>=0.8.1
+  # While a not direct dependacy
+  # We need to raise this to ensure the goes netcdf files open.
+  h5py>=3.1.0
   matplotlib>=3.1.0
   pandas>=0.24.0
 visualization =
