--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
          "setuptools",
-         "setuptools_scm",
+         "setuptools_scm<6",
          "wheel",
          "oldest-supported-numpy",
          "extension-helpers"
