--- a/setup.cfg
+++ b/setup.cfg
@@ -87,7 +87,7 @@ docs =
   ruamel.yaml
   sphinx
   sphinx-automodapi
-  sphinx-changelog>=1.0.0 # First to include the changelog directive
+  sphinx-changelog>=1.1.0rc1 # First to support towncrier 21.3
   sphinx-gallery>=0.9.0 # First to include the defer figures functionality
   sunpy-sphinx-theme
 
