--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,9 @@ net =
   tqdm
   zeep
 timeseries =
+  # While a not direct dependency
+  # We need to raise this to ensure the goes netcdf files open.
+  h5py>=3.1.0
   h5netcdf>=0.8.1
   matplotlib>=2.2.2
   pandas>=0.24.0
